<resources>
    <string name="app_name">TugasMinggu3_Layout</string>
    <string name="title_activity_linear">LinearActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="reminder">Reminder Name</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tombol">Tombol</string>
    <string name="merah">#890000</string>
    <string name="username">Username :</string>
    <string name="pass">Password :</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="nana">nana</string>
    <string name="button">Text Button</string>
    <string name="Scroll">ScrollView</string>
    <string name="pembukaan">welcome to Tutlane</string>
    <string name="btn2">Button Two</string>
    <string name="btn3">Button Three</string>
    <string name="btn4">Button Four</string>
    <string name="btn5">Button Five</string>
    <string name="btn6">Button Six</string>
    <string name="btn7">Button Seven</string>
    <string name="btn8">Button Eight</string>
    <string name="btn9">Button Nine</string>
    <string name="btn">Button One</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="linear">Linear Layout</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="constrain">Constraint Layout</string>
    <string name="relative">Relative Layout</string>
    <string name="frame">Frame Layout</string>
    <string name="table">Table Layout</string>
    <string name="materialDesign">Material Design Layout</string>
    <string name="scrollView">Scroll View</string>
    <string name="scrollViewHorizontal">Scroll View Horizontal</string>

    <string-array name="dates">
        <item>Wed, June 27, 2012 </item>
        <item>Thur, March 24, 2021 </item>
    </string-array>

    <string-array name="times">
        <item>8:00am</item>
        <item>7:00pm</item>
    </string-array>
</resources>